WebKit ignores the nowrap on 'td nowrap="nowrap"', if an absolute width is specified

WebKit ignores the nowrap on 'td nowrap="nowrap"', if an absolute width is specified

https://bugs.webkit.org/show_bug.cgi?id=183642

Reviewed by Tim Nguyen.

Merge - https://chromium.googlesource.com/chromium/src/+/5e6c851254f90f6f495713f7248ffe9a155de413

Previously we only applied it when a 'td' element had no fixed-width. This was incorrect behavior and it will align Webkit with Blink and Gecko for Web interop.

* Source/WebCore/html/HTMLTableCellElement.cpp
(HTMLTableCellElement::hasPresentationalHintsForAttribute): Update nowrap Attribute to respect CSSValueNowrap rather than CSSValueWebkitNowrap
* Source/WebCore/style/StyleAdjuster.cpp
(Adjuster:adjust): Removed logic about td tag only accepting wrap for Fixed Width
* LayoutTests/imported/w3c/web-platform-tests/quirks/table-cell-nowrap-minimum-width-calculation-expected.txt: Updated Test Expectations
* LayoutTests/platform/gtk/fast/table/003-expected.png: Updated Test Expectations
* LayoutTests/platform/gtk/fast/table/003-expected.txt: Updated Test Expectations
* LayoutTests/platform/gtk/fast/tables/021-expected.png: Updated Test Expectations
* LayoutTests/platform/glib/fast/tables/021-expected.txt: Updated Test Expectations
* LayoutTests/platform/gtk/fast/table/rowspan-paint-order-vertical-expected.png: Updated Test Expectations
* LayoutTests/platform/gtk/fast/table/rowspan-paint-order-vertical-expected.txt: Updated Test Expectations
* LayoutTests/platform/gtk/tables/mozilla/bugs/bug57828-expected.png: Updated Test Expectations
* LayoutTests/platform/gtk/tables/mozilla/bugs/bug78162-expected.png: Updated Test Expectations
* LayoutTests/platform/gtk/tables/mozilla/bugs/bug78162-expected.txt: Updated Test Expectations
* LayoutTests/platform/gtk/tables/mozilla/bugs/bug92143-expected.txt: Updated Test Expectations
* LayoutTests/platform/gtk/tables/mozilla/bugs/bug92143-expected.png: Updated Test Expectations
* LayoutTests/platform/ios/fast/table/021-expected.txt: Updated Test Expectations
* LayoutTests/platform/ios/fast/table/rowspan-paint-order-vertical-expected.txt: Updated Test Expectations
* LayoutTests/platform/ios/tables/mozilla/bugs/bug57828-expected.txt: Updated Test Expectations
* LayoutTests/platform/ios/tables/mozilla/bugs/bug78162-expected.txt: Updated Tests Expectations
* LayoutTests/platform/ios/tables/mozilla/bugs/bug92143-expected.txt: Updated Tests Expectations
* LayoutTests/platform/mac/fast/table/003-expected.png: Updated Tests Expectations
* LayoutTests/platform/mac/fast/table/003-expected.txt: Updated Test Expectations
* LayoutTests/platform/mac/fast/table/021-expected.png: Updated Test Expectations
* LayoutTests/platform/mac/fast/table/021-expected.txt: Updated Test Expectations
* LayoutTests/platform/mac/fast/tables/mozilla/bugs/bug57828-expected.png: Updated Test Expectations
* LayoutTests/platform/mac/fast/tables/mozilla/bugs/bug57828-expected.txt: Updated Test Expectations
* LayoutTests/platform/mac/fast/tables/mozilla/bugs/bug78162-expected.png: Updated Test Expectations
* LayoutTests/platform/mac/fast/tables/mozilla/bugs/bug78162-expected.txt: Updated Test Expectations
* LayoutTests/platform/mac/fast/tables/mozilla/bugs/bug92143-expected.png: Updated Test Expectations
* LayoutTests/platform/mac/fast/tables/mozilla/bugs/bug92143-expected.txt: Updated Test Expectations
* LayoutTests/platform/mac/fast/table/rowspan-paint-order-vertical-expected.png: Updated Test Expectations
* LayoutTests/platform/mac/fast/table/rowspan-paint-order-vertical-expected.txt: Updated Test Expectations
* LayoutTests/platform/glib/mozilla/bugs/bug57828-expected.txt: Updated Test Expectations

Canonical link: https://commits.webkit.org/254505@main